Fixed Navigation Bar overlapping text headers etc

--- a/style.css
+++ b/style.css
@@ -5,20 +5,32 @@
   padding: 0 auto;
 }
 
-body{
-margin-bottom:10%;
-
-}
-.navbar{
- margin-left: 100px;
-
-}
-.navbar font{
- font-size:1;
-
+body {
+  margin-bottom: 10%;
+  background-color: white;
+  margin-top: 50px;
 }
 
-.navbarmarginleft{
+/*This is really important!!!*/
+
+.jumptarget::before {
+  content:"";
+  display:block;
+  height: 65px; /* fixed header height*/
+  margin:-65px 0 0; /* negative fixed header height */
+}
+
+/*This is really important!!!*/
+
+.navbar {
+  margin-left: 100px;
+}
+
+.navbar font {
+  font-size: 1;
+}
+
+.navbarmarginleft {
   margin-left: 50px;
 }
 
@@ -28,7 +40,11 @@ margin-bottom:10%;
   padding: 0;
   overflow: hidden;
   background-color: #174DC9;
-  position: fixed !important; top: 0; left: 0; right: 0;
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
   width: 100%;
   box-shadow: 0px 5px 30px grey;
 }
@@ -51,57 +67,57 @@ margin-bottom:10%;
 }
 
 .dropdown {
-    float: left;
-    overflow: hidden;
+  float: left;
+  overflow: hidden;
 }
 
 .dropdown .dropbtn {
-    font-size: 28px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 16px 16px;
-    background-color: inherit;
+  font-size: 28px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 16px 16px;
+  background-color: inherit;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: Navy;
+  background-color: Navy;
 }
 
 .dropdown-content {
-    display: none;
-    position: fixed;
-    background-color: #174DC9;
-    min-width: 155px;
-    box-shadow: 0px 5px 30px grey;
-
+  display: none;
+  position: fixed;
+  background-color: #174DC9;
+  min-width: 155px;
+  box-shadow: 0px 5px 30px grey;
 }
 
 .dropdown-content a {
-    float: none;
-    color: White;
-    padding: 16px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
+  float: none;
+  color: White;
+  padding: 16px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
 }
 
 .dropdown-content a:hover {
-    background-color: Navy;
+  background-color: Navy;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 
 /*Navigation Bar end */
 
 .cont {
-        padding: 70px 200px 70px 200px;
+  padding: 80px 200px 80px 200px;
+
 }
 
-.cont img{
-    max-width: 40%;
-    max-height: 150px;
-    border: 3px solid;
+.cont img {
+  max-width: 40%;
+  max-height: 150px;
+  border: 3px solid;
 }
